syntax = "proto3";

package nillion.permissions.v1;

import "google/protobuf/empty.proto";
import "nillion/permissions/v1/permissions.proto";
import "nillion/permissions/v1/retrieve.proto";
import "nillion/permissions/v1/update.proto";

// A service to interact with permissions.
service Permissions {
  // Retrieve the permissions for a set of values.
  rpc RetrievePermissions(retrieve.RetrievePermissionsRequest) returns (permissions.Permissions);

  // Update the permissions for a set of values.
  rpc UpdatePermissions(update.UpdatePermissionsRequest) returns (google.protobuf.Empty);
}
